Add styling to the website and logo

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -18,6 +18,10 @@
         <li><a href="register.html">Register</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="tweets.html">Tweets</a></li>
+        <li class="logo">&starf;</li> <!-- Example logo character -->
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
     </ul>
 </header>
 
