currency-converter project done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <link rel="icon" type="image/jpg" href="images/favicon.jpg">
   <script defer src="script.js"></script>
 </head>
-<body>
+<body
+style="
+    background-image: url('images/cover.jpg'); 
+    background-size: cover; 
+    background-position: center center; 
+  ">
   <div class="converter-container">
     <header>
       <p class="date" id="currentDate"></p>
