currency-converter project completetd

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ style="
       <input type="number" id="amount" placeholder="Enter amount" class="amount-input">
       <div class="currency-selectors">
         <select id="fromCurrency" class="currency-dropdown"></select>
-        <button class="swap-btn" onclick="swapCurrencies()">⇆</button>
+        <button id="swapBtn" class="swap-btn" onclick="swapCurrencies()">⇆</button>
         <select id="toCurrency" class="currency-dropdown"></select>
       </div>
-      <button class="convert-btn" onclick="convertCurrency()">Convert</button>
+      <button id="convertBtn" class="convert-btn" onclick="convertCurrency()">Convert</button>
       <p id="resultDiv" class="result"></p>
     </div>
   </div>
