currency-converter project completeted

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ style="
   <div class="converter-container">
     <header>
       <p class="date" id="currentDate"></p>
-      <p class="title">Currency</p>
+      <p class="title">Currency Converter</p>
     </header>
     <div class="converter-body">
       <input type="number" id="amount" placeholder="Enter amount" class="amount-input">
